--- a/css/result.css
+++ b/css/result.css
@@ -9,8 +9,6 @@
     box-shadow: 0px 2px 10px 1px rgba(0,0,0,.2);
 }
 
-
-
 .mask {
     position: fixed;
     z-index: 5;
@@ -42,7 +40,7 @@
 }
 
 .mask .spinner i:after {
-    box-shadow: inset 0 0 0 .1em rgba(255, 255, 255, 1);
+    box-shadow: inset 0 0 0 .1em #fff;
 }
 
 .mask .error {
@@ -61,7 +59,7 @@
     margin-top: 50px;
     border: none;
     border-radius: 2px; 
-    color: rgb(100, 100, 100);
+    color: #646464;
     background-color: #fff;
     font-size: 14px;
     font-weight: 100;
@@ -71,7 +69,6 @@
 
 .mask .error button:hover {
     background-color: #BFBFBF;
-  
 }
 
 .mask .error button:active{
@@ -84,19 +81,18 @@
     margin: auto;
 }
 
-.result {
-   
-}
-
 .result-title {
     height: 50px;
     width: 100%;
     margin-top: 50px;
     margin-bottom: 10px;
     padding: 10px;
+    color: black;
     font-size: 34px;
     font-weight: 100;
-    color: black;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .result-title a {
@@ -104,16 +100,18 @@
     color: black;
     text-decoration: none;
     border-bottom: 1.5px solid black;
-
+    transition: 200ms;
 }
 
+.result-title a:hover {
+    text-shadow: 0px 0px 10px rgba(0,0,0,.4);
+}
 
 .result-repo {
     float: left;
     width: 300px;
     padding: 15px 5px;
     margin: 5px;
-    
 }
 
 .result-twitter {
@@ -123,14 +121,12 @@
     margin: 5px;
 }
 
-
 .title {
     font-size: 28px;
     line-height: 28px;
     font-weight: 700;
     margin-left: 5px;
     margin-bottom: 10px;
-    
 }
 
 .item {
@@ -145,12 +141,11 @@
     background-color: #dbdbdb;
 }
 
-
 .item-value {
     float: right;
     margin-top: 2px;
     max-width: 220px;
-    overflow:hidden;
+    overflow: hidden;
     font-size: 16px;
     font-weight: 400;
     text-overflow: ellipsis;
